Создание компонентов Navbar и AppLink. Настройка snippeta

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 .app.ligth {
   --bg-color: rgb(210, 210, 234);
+  --inverted-bg-color: rgb(94, 94, 241);
 
   --primary-color: rgb(45, 87, 222);
   --secondary-color: rgb(75, 127, 225);
+  --inverted-primary-color: rgb(13, 191, 13);
+  --inverted-secondary-color: rgb(109, 252, 109);
 }
