--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -9,4 +9,6 @@
   --font-m: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
 
   --navbar-height: 50px;
+  --sidebar-width: 300px;
+  --sidebar-with-collapsed: 80px;
 }
