добавлена локализация языков с помощью i18n

--- a/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
@@ -13,4 +13,10 @@
 .switchers {
   position: absolute;
   bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.lang {
+  margin-left: 12px;
 }
