добавлены styleint и i18nextlint

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,9 +1,8 @@
 .app.ligth {
-  --bg-color: rgb(210, 210, 234);
-  --inverted-bg-color: rgb(94, 94, 241);
-
+  --bg-color: rgb(210 210 234);
+  --inverted-bg-color: rgb(94 94 241);
   --primary-color: rgb(0 25 50);
-  --secondary-color: rgb(75, 127, 225);
-  --inverted-primary-color: rgb(13, 191, 13);
-  --inverted-secondary-color: rgb(109, 252, 109);
+  --secondary-color: rgb(75 127 225);
+  --inverted-primary-color: rgb(13 191 13);
+  --inverted-secondary-color: rgb(109 252 109);
 }
