--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-  --bg-color: rgb(94, 94, 241);
-  --inverted-bg-color: rgb(210, 210, 234);
-
-  --primary-color: rgb(13, 191, 13);
-  --secondary-color: rgb(109, 252, 109);
-  --inverted-primary-color: rgb(45, 87, 222);
-  --inverted-secondary-color: rgb(75, 127, 225);
+  --bg-color: rgb(94 94 241);
+  --inverted-bg-color: rgb(210 210 234);
+  --primary-color: rgb(13 191 13);
+  --secondary-color: rgb(109 252 109);
+  --inverted-primary-color: rgb(45 87 222);
+  --inverted-secondary-color: rgb(75 127 225);
 }
