--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,13 +1,11 @@
 :root {
-  --font-family-main: Consolas, "Time New Roman", Serif;
+  --font-family-main: consolas, "Time New Roman", serif;
   --font-size-m: 16px;
   --font-line-m: 24px;
   --font-m: var(--font-line-m) / var(--font-line-m) var(--font-family-main);
-
   --font-size-l: 24px;
   --font-line-l: 32px;
-  --font-m: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
-
+  --font-l: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-with-collapsed: 80px;
