--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -10,3 +10,10 @@
   border: none;
   background: none;
 }
+
+.outline {
+  padding: 10px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: none;
+}
