--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -6,6 +6,9 @@
   --font-size-l: 24px;
   --font-line-l: 32px;
   --font-l: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
+  --font-size-xl: 32px;
+  --font-line-xl: 40px;
+  --font-xl: var(--font-line-xl) / var(--font-line-xl) var(--font-family-main);
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-with-collapsed: 80px;
