--- a/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
@@ -6,10 +6,6 @@
   transition: width 0.2s;
 }
 
-.collapsed {
-  width: var(--sidebar-with-collapsed);
-}
-
 .switchers {
   position: absolute;
   bottom: 20px;
@@ -19,4 +15,56 @@
 
 .lang {
   margin-left: 12px;
+}
+
+
+
+.collapseBtn {
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
+}
+
+.items {
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.item {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.link {
+  margin-left: 10px;
+}
+
+.icon {
+  width: 32px;
+  height: 32px;
+  fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+  width: var(--sidebar-with-collapsed);
+
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lang {
+    margin-left: 0;
+  }
+
+  .link {
+    opacity: 0;
+    width: 0;
+    transition: 0.2s opacity;
+  }
 }
