Добавлен компонент Modal и Portal

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -13,4 +13,11 @@
   --sidebar-width: 300px;
   --sidebar-with-collapsed: 80px;
   --primary-color: rgb(54 52 52);
+  --bg-color: rgb(210 210 234);
+
+  // z - индексы
+  --modal-z-index: 10;
+
+  // Цвета для модальных окон
+  --overlay-color: rgb(0 0 0 / 20%);;
 }
