--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -4,14 +4,6 @@
   background: var(--inverted-bg-color);
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   padding: 20px;
-}
-
-
-.links {
-  margin-left: auto;
-} 
-
-.mainLink {
-  margin-right: 15px; 
 }
