Изменены стили с темами, добавлен json-server

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,4 +1,4 @@
-.app.dark {
+.app_dark_theme {
   --bg-color: rgb(94 94 241);
   --inverted-bg-color: rgb(210 210 234);
   --primary-color: rgb(13 191 13);
