--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,4 +1,4 @@
-.app.ligth {
+.app_ligth_theme {
   --inverted-bg-color: rgb(94 94 241);
   --primary-color: rgb(0 25 50);
   --secondary-color: rgb(75 127 225);
