Добавлена авторизация пользователя. Добавлен новый компонент Text

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,5 +19,7 @@
   --modal-z-index: 10;
 
   // Цвета для модальных окон
-  --overlay-color: rgb(0 0 0 / 60%);;
+  --overlay-color: rgb(0 0 0 / 60%);
+  --red-light: rgb(246 32 32);
+  --red-dark: rgb(188 25 25);
 }
