Добавлен компонент articleDetails

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,11 @@
   --secondary-color: rgb(109 252 109);
   --inverted-primary-color: rgb(45 87 222);
   --inverted-secondary-color: rgb(75 127 225);
+
+  // skeleton
+  --skeleton-color: rgb(41 41 169);
+  --skeleton-shadow: rgb(41 41 169);
+  
+  // code
+  --code-bg: rgb(152 152 251);
 }
