--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -4,4 +4,11 @@
   --secondary-color: rgb(75 127 225);
   --inverted-primary-color: rgb(13 191 13);
   --inverted-secondary-color: rgb(109 252 109);
+
+  // skeleton
+  --skeleton-color: #9595a1;
+  --skeleton-shadow: #9595a1;
+
+  // code
+  --code-bg: #fff;
 }
