--- a/src/app/styles/themes/purple.scss
+++ b/src/app/styles/themes/purple.scss
@@ -2,7 +2,14 @@
   --bg-color: #F8F4FB;
   --inverted-bg-color: #760dd2;
   --primary-color: #6171d5;
-  --secondary-color: #F8F4FB;
+  --secondary-color: #bb91db;
   --inverted-primary-color: #F8F4FB;
   --inverted-secondary-color: #19171a;
+
+  // skeleton
+  --skeleton-color: #919fff;
+  --skeleton-shadow: #919fff;
+
+  // code
+  --code-bg: #fff;
 }
