--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -3,6 +3,13 @@
   color: var(--primary-color);
   padding: 6px 15px;
   border-radius: 8px;
+  transition: opacity 0.3s, fill-opacity 0.3s, stroke-opacity 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+    fill-opacity: 0.8;
+    stroke-opacity: 0.8;
+  }
 
   &:disabled {
     cursor: default;
