Добавлена возможность добавить комментарий

--- a/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
@@ -3,6 +3,7 @@
   width: var(--sidebar-width);
   background: var(--inverted-bg-color);
   position: relative;
+  flex-shrink: 0;
   transition: width 0.2s;
 }
 
@@ -16,8 +17,6 @@
 .lang {
   margin-left: 12px;
 }
-
-
 
 .collapseBtn {
   position: absolute;
