--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -1,3 +1,9 @@
 .commentTitle {
   margin-top: 16px;
 }
+
+.recommendations {
+  margin-top: 20px;
+  flex-wrap: nowrap;
+  overflow: auto hidden;
+}
