Добавлены компоненты обертки

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -3,23 +3,6 @@
     margin-left: auto;
   }
 
-  .header {
-    display: flex;
-    align-items: center;
-  }
-
-  .username {
-    margin-left: 8px;
-  }
-
-  .date {
-    margin-left: auto;
-  }
-
-  .title {
-    margin-top: 8px
-  }
-
   .img {
     width: 100%;
     max-height: 250px;
@@ -28,8 +11,6 @@
   }
 
   .footer {
-    display: flex;
-    align-items: center;
     margin-top: 12px;
   }
 
@@ -38,7 +19,6 @@
     overflow-y: hidden;
   }
 }
-
 
 .SMALL {
   width: 230px;
@@ -75,12 +55,10 @@
 
 
   .infoWrapper {
-    display: flex;
-    align-items: center;
     margin-top: 8px;
   }
 
-  .types p {
+  .types {
     width: 115px;
     white-space: nowrap;
     overflow: hidden;
