--- a/src/features/AddCommentForm/ui/AddCommentForm/AddCommentForm.module.scss
+++ b/src/features/AddCommentForm/ui/AddCommentForm/AddCommentForm.module.scss
@@ -1,9 +1,7 @@
 .AddCommentForm {
-  display: flex; 
   padding: 20px;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid var(--primary-color)
+  border: 1px solid var(--primary-color);
+  margin: 16px 0;
 }
 
 .input {
