--- a/src/shared/ui/Text/ui/Text.module.scss
+++ b/src/shared/ui/Text/ui/Text.module.scss
@@ -42,6 +42,16 @@
   text-align: right;
 }
 
+.size_s {
+  .title {
+    font: var(--font-m);
+  }
+
+  .subtitle  {
+    font: var(--font-s);
+  }
+}
+
 .size_m {
   .title {
     font: var(--font-l);
