--- a/src/shared/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ui/ListBox.module.scss
@@ -16,10 +16,6 @@
   background-color: var(--listbox-bg);
   border-radius: 12px;
   box-shadow: 4px 2px 8px var(--listbox-bg);
-
-  &.top {
-    bottom: 100%; 
-  }
 }
 
 .item {
@@ -40,4 +36,24 @@
 .disabled {
   opacity: 0.6;
   cursor: default;
+}
+
+.optionsBottomLeft {
+  top: 100%;
+  right: 0;
+}
+
+.optionsBottomRight {
+  top: 100%;
+  left: 0;
+}
+
+.optionsTopLeft {
+  bottom: 100%;
+  right: 0;
+}
+
+.optionsTopRight {
+  bottom: 100%;
+  left: 0;
 }
