Добавлен хук useModal

--- a/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
+++ b/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
@@ -5,3 +5,9 @@
   overflow-y: auto;
   padding-right: 12px;
 }
+
+.NotificationButtonMobile {
+  width: 100% !important;
+  max-height: 80vh;
+  min-height: 0;
+}
