--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -9,9 +9,20 @@
   // skeleton
   --skeleton-color: rgb(41 41 169);
   --skeleton-shadow: rgb(41 41 169);
-  
+
   // code
   --code-bg: rgb(152 152 251);
   --card-bg: rgb(105 105 255);
   --listbox-bg: rgb(105 105 255);
+
+  // redesigned
+  --dark-bg-redesigned: #090f11;
+  --bg-redesigned: #0c1214;
+  --light-bg-redesigned: #151c1f;
+  --text-redesigned: #dbdbdb;
+  --hint-redesigned: #555;
+  --cancel-redesigned: #d95757;
+  --save-redesigned: #6cd98b;
+  --icon-redesigned: #74a2b2;
+  --accent-redesigned: #5ed3f3;
 }
