--- a/src/app/styles/themes/purple.scss
+++ b/src/app/styles/themes/purple.scss
@@ -1,9 +1,9 @@
 .app_purple_theme {
-  --bg-color: #F8F4FB;
+  --bg-color: #f8f4fb;
   --inverted-bg-color: #760dd2;
   --primary-color: #6171d5;
   --secondary-color: #bb91db;
-  --inverted-primary-color: #F8F4FB;
+  --inverted-primary-color: #f8f4fb;
   --inverted-secondary-color: #19171a;
 
   // skeleton
@@ -14,4 +14,15 @@
   --code-bg: #fff;
   --card-bg: hsl(0deg 12% 91%);
   --listbox-bg: hsl(0deg 12% 91%);
+
+  // redesigned
+  --dark-bg-redesigned: #fff3d6;
+  --bg-redesigned: #f0c048;
+  --light-bg-redesigned: #f2d791;
+  --text-redesigned: #1b1311;
+  --hint-redesigned: #b8b2a2;
+  --cancel-redesigned: #ff5e5e;
+  --save-redesigned: #52fa81;
+  --icon-redesigned: #4875f0;
+  --accent-redesigned: #1d59ff;
 }
