--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,9 @@
 :root {
-  --font-family-main: consolas, "Time New Roman", serif;
+  --font-family-main: consolas, 'Time New Roman', serif;
+  --font-family-text: 'Nunito Sans', sans-serif;
+  --font-family-header: 'Roboto', sans-serif;
+
+  // Все остальное
   --font-size-s: 12px;
   --font-line-s: 20px;
   --font-s: var(--font-line-s) / var(--font-line-s) var(--font-family-main);
@@ -25,4 +29,21 @@
   --overlay-color: rgb(0 0 0 / 60%);
   --red-light: rgb(246 32 32);
   --red-dark: rgb(188 25 25);
+
+  // redesigned
+  // s
+  --font-s-redesigned: var(--font-size-s) / var(--font-line-s)
+    var(--font-family-text);
+
+  // m
+  --font-m-redesigned: var(--font-size-m) / var(--font-line-m)
+    var(--font-family-text);
+
+  // l
+  --font-l-redesigned: var(--font-size-l) / var(--font-line-l)
+    var(--font-family-header);
+
+  // xl
+  --font-xl-redesigned: var(--font-size-xl) / var(--font-line-xl)
+    var(--font-family-header);
 }
