--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -2,12 +2,12 @@
   min-height: 100%;
   display: grid;
   grid-template-areas: 'sidebar content rightbar';
-  grid-template-columns: 284px 1fr 176px;
+  grid-template-columns: 284px 1fr 100px;
 }
 
 .sidebar {
   grid-area: sidebar;
-  justify-self: center;
+  justify-self: left;
   padding: 32px;
   position: sticky;
   top: 0;
@@ -19,6 +19,7 @@
   justify-self: center;
   max-width: 1200px;
   padding: 32px;
+  width: 100%;
 }
 
 .rightbar {
