--- a/src/shared/ui/AppLogo/ui/AppLogo.module.scss
+++ b/src/shared/ui/AppLogo/ui/AppLogo.module.scss
@@ -2,8 +2,6 @@
   position: relative;
 
   & img {
-    width: 80px;
-    height: 80px;
     margin-top: 16px;
   }
 }
@@ -23,6 +21,7 @@
   height: 300px;
   border-radius: 50%;
   opacity: 0.6;
+  pointer-events: none;
 }
 
 .gradientSmall {
@@ -39,4 +38,5 @@
   );
   border-radius: 50%;
   opacity: 0.6;
+  pointer-events: none;
 }
