--- a/src/shared/ui/Icon/ui/Icon.module.scss
+++ b/src/shared/ui/Icon/ui/Icon.module.scss
@@ -1,9 +1,20 @@
 .Icon {
-  fill: var(--primary-color);
-  color: var(--primary-color);;
+  color: var(--icon-redesigned);
+
+  & path {
+    transition: all 0.3s;
+  }
 }
 
-.inverted {
-  fill: var(--inverted-primary-color);
-  color: var(--inverted-primary-color);
+.IconButton {
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+}
+
+.IconButton:hover .Icon {
+  color: var(--accent-redesigned);
 }
