--- a/src/shared/ui/Text/ui/Text.module.scss
+++ b/src/shared/ui/Text/ui/Text.module.scss
@@ -1,9 +1,9 @@
 .title {
-  color: var(--primary-color);
+  color: var(--text-redesigned);
 }
 
 .text {
-  color: var(--secondary-color);
+  color: var(--text-redesigned);
 }
 
 .title + .text {
@@ -20,13 +20,13 @@
   }
 }
 
-.inverted {
+.accent {
   .title {
-    color: var(--inverted-primary-color);
+    color: var(--accent-redesigned);
   }
 
   .text {
-    color: var(--inverted-secondary-color);
+    color: var(--accent-redesigned);
   }
 }
 
@@ -44,30 +44,30 @@
 
 .size_s {
   .title {
-    font: var(--font-m);
+    font: var(--font-m-redesigned);
   }
 
-  .subtitle  {
-    font: var(--font-s);
+  .subtitle {
+    font: var(--font-s-redesigned);
   }
 }
 
 .size_m {
   .title {
-    font: var(--font-l);
+    font: var(--font-l-redesigned);
   }
 
-  .subtitle  {
-    font: var(--font-m);
+  .subtitle {
+    font: var(--font-m-redesigned);
   }
 }
 
 .size_l {
   .title {
-    font: var(--font-xl);
+    font: var(--font-xl-redesigned);
   }
 
-  .subtitle  {
-    font: var(--font-l);
+  .subtitle {
+    font: var(--font-l-redesigned);
   }
 }
