--- a/src/shared/ui/Popups/ui/Dropdown/ui/Dropdown.module.scss
+++ b/src/shared/ui/Popups/ui/Dropdown/ui/Dropdown.module.scss
@@ -4,27 +4,14 @@
   border: none;
   background: none;
   outline: none;
-  color: var(--primary-color);
+  color: var(--text-redesigned);
   cursor: pointer;
 }
 
 .menu {
   display: flex;
   flex-direction: column;
-  background: var(--card-bg);
+  background: var(--dark-bg-redesigned);
   position: absolute;
   z-index: 10000;
-  border-radius: 8px;
-  border: 1px solid var(--primary-color);
-
-  & .item:last-child {
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
-
-  & .item:first-child {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
 }
-
