--- a/src/shared/ui/Popups/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/Popups/ui/ListBox/ui/ListBox.module.scss
@@ -6,7 +6,7 @@
 .options {
   position: absolute;
   z-index: 10000;
-  background-color: var(--listbox-bg);
+  background: var(--dark-bg-redesigned);
   border-radius: 12px;
-  box-shadow: 4px 2px 8px var(--listbox-bg);
+  box-shadow: 4px 2px 8px var(--dark-bg-redesigned);
 }
