--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -29,6 +29,14 @@
   background: none;
 }
 
+.filled {
+  background: var(--light-bg-redesigned);
+  border: none;
+  outline: none;
+  border-radius: 34px;
+  padding: 8px 16px;
+}
+
 .square {
   padding: 0;
 }
@@ -49,6 +57,10 @@
   width: var(--font-line-xl);
   height: var(--font-line-xl);
   font: var(--font-xl);
+}
+
+.s {
+  font: var(--font-s);
 }
 
 .m {
