--- a/src/shared/ui/Input/ui/Input.module.scss
+++ b/src/shared/ui/Input/ui/Input.module.scss
@@ -1,18 +1,47 @@
 .Input {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
-  justify-content: flex-start;
-
+  align-items: center;
+  border-radius: 48px;
+  padding: 8px 16px;
+  border: 2px solid var(--icon-redesigned);
+  width: 100%;
+  height: 38px;
 
   input {
+    background: none;
     outline: none;
-    border-radius: 8px;
-    padding: 6px 12px;
+    border: none;
+    color: var(--text-redesigned);
+    width: 100%;
+
+    &::placeholder {
+      color: var(--hint-redesigned);
+    }
   }
 }
 
-.readonly {
+.Input:has(input:focus) {
+  border: 2px solid var(--accent-redesigned);
+
+  & svg {
+    color: var(--accent-redesigned);
+  }
+}
+
+.Input:has(input:focus) .readonly {
   opacity: 0.5;
   cursor: default;
+}
+
+.addonLeft,
+.addonRight {
+  display: flex;
+}
+
+.withAddonLeft {
+  padding-left: 8px;
+}
+
+.withAddonRight {
+  padding-right: 8px;
 }
