--- a/src/shared/ui/Stack/ui/Flex/Flex.module.scss
+++ b/src/shared/ui/Stack/ui/Flex/Flex.module.scss
@@ -27,7 +27,7 @@
 }
 
 .alignfyEnd {
-  align-items: flex-end
+  align-items: flex-end;
 }
 
 .directionRow {
@@ -48,6 +48,10 @@
 
 .gap16 {
   gap: 16px;
+}
+
+.gap24 {
+  gap: 24px;
 }
 
 .gap32 {
