--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,12 +1,8 @@
 .BIG {
-  .views {
-    margin-left: auto;
-  }
-
   .img {
     width: 100%;
-    max-height: 250px;
-    object-fit: contain;
+    max-height: 420px;
+    object-fit: cover;
     margin: 16px 0;
   }
 
@@ -15,8 +11,8 @@
   }
 
   .textBlock {
-    max-height: 200px;
-    overflow-y: hidden;
+    max-height: 72px;
+    overflow: hidden;
   }
 }
 
@@ -37,22 +33,10 @@
     object-fit: contain;
   }
 
-  .date {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
-  }
-
   &:hover {
     opacity: 0.8;
     transform: scale(1.01);
-
-    .date {
-      display: block;
-    }
   }
-
 
   .infoWrapper {
     margin-top: 8px;
@@ -76,7 +60,4 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
-
 }
-
-
