--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -32,9 +32,13 @@
 }
 
 .outline {
-  border: 1px solid var(--primary-color);
-  color: var(--primary-color);
+  border: 1px solid var(--icon-redesigned);
   background: none;
+  outline: none;
+
+  &:hover {
+    border-color: var(--accent-redesigned);
+  }
 }
 
 .filled {
