Редизайн карточки статьи

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -9,7 +9,7 @@ button,
 textarea,
 select {
   margin: 0;
-  font:inherit;
+  font: inherit;
 }
 
 a {
@@ -18,4 +18,13 @@ a {
 
 li {
   list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 }
