--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -2,10 +2,7 @@
   min-height: 100%;
 }
 
-.avatarWrapper {
-  margin-top: 16px;
-}
-
-.avatar {
-  margin: 0 auto;
+.img {
+  width: 100%;
+  max-height: 420px;
 }
