--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -26,11 +26,11 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--card-bg);
+  background: var(--light-bg-redesigned);
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--inverted-primary-color);
+  background-color: var(--icon-redesigned);
   border-radius: 20px;
-  border: 2px solid var(--primary-color);
+  border: 1px solid var(--accent-redesigned);
 }
